plugins {
	id 'org.springframework.boot' version '3.5.3' apply false
	id 'io.spring.dependency-management' version '1.1.7' apply false
}

// 공통 설정
allprojects {
	group = 'com.edukit'
	version = '0.0.1-SNAPSHOT'
	
	repositories {
		mavenCentral()
	}
}

// 서브 프로젝트 공통 설정
subprojects {
	apply plugin: 'java'
	apply plugin: 'io.spring.dependency-management'
	
	java {
		toolchain {
			languageVersion = JavaLanguageVersion.of(21)
		}
	}
	
	configurations {
		compileOnly {
			extendsFrom annotationProcessor
		}
	}
	
	dependencyManagement {
		imports {
			mavenBom 'org.springframework.boot:spring-boot-dependencies:3.5.3'
		}
	}
	
	dependencies {
		// lombok
		compileOnly 'org.projectlombok:lombok'
		annotationProcessor 'org.projectlombok:lombok'

		// spring boot
		implementation 'org.springframework.boot:spring-boot-starter'
		implementation 'org.springframework.boot:spring-boot-starter-webflux'

		// spring boot configuration processor
		annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

		// test
		testImplementation 'org.springframework.boot:spring-boot-starter-test'
		testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	}
	
	tasks.named('test') {
		useJUnitPlatform()
	}
}
